ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  tls:
  - hosts:
    - hello-risf.local.domain
    secretName: hello-risf-tls
  - hosts:
    - hello-itsf.local.domain
    secretName: hello-itsf-tls
  rules:
  - host: hello-risf.local.domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-risf-service
            port:
              number: 80
  - host: hello-itsf.local.domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-itsf-service
            port:
              number: 80
